--- a/views/index.pug
+++ b/views/index.pug
@@ -7,16 +7,22 @@ block content
           div.left-hmp-banner
             h1.title-hmp=title 
             h3.heading-hmp Welcome back to the Club #{user.username} !
-            span Below here, you can see all the comments posted by all our members. Feel free to share with them!
+            div.heading-hmp  Below here, you can see all the comments posted by all our members. Feel free to share with them!
+            if (user.memberStatus == false)
+              h5.password-div Our password is 1234
             a.log-in-out-btn(href="/log-out") LOG OUT
           div.right-hmp-banner
               img.hmp-pic(src='/images/hmp-pic.jpg' height='90%')
 
+        hr.hr-separate
+        
+        div.title User's comments
         div.comment-list
           each message in messages
             div.message-container 
-              h4.message-title= message.title
-              h5.author= message.user.name
+              div.message-first-line
+                h4.message-title= message.title
+                h5.message-author= message.user.name
               p.message-text= message.content 
               p.message-date= message.date
 
@@ -26,16 +32,18 @@ block content
           div.left-hmp-banner
             h1.title-hmp=title 
             h3.heading-hmp This club was created centuries ago to share thoughts and ideas about the society. Today, our goal still remains and keeps his doors open. Please feel free to log-in and join the club to share your thoughts.
-            h5.password-div Our password is 1234
             a.log-in-out-btn(href='/auth/log-in') Log-in
           div.right-hmp-banner
               img.hmp-pic(src='/images/hmp-pic.jpg' height='90%')
 
+        hr.hr-separate
 
+        div.title User's comments
         div.comment-list
           each message in messages
             div.message-container 
-              h4.message-title= message.title
-              h5.author Anonymous
+              div.message-first-line
+                h4.message-title= message.title
+                h5.message-author Anonymous
               p.message-text= message.content 
               p.message-date= message.date
