--- a/views/login_form.pug
+++ b/views/login_form.pug
@@ -1,25 +1,26 @@
 extends layout
 
 block content
-  h1= title
-  p Please log-in:
 
+  div.form-container
+    h1.title-form= title
+    div.text-infos Please log-in:
 
-  form(method='POST' action='/log-in')
-    div.form-group
-      label(for='username') Email:
-      input#email.form-control(
-        type='email', 
-        placeholder='Email' 
-        name='username' 
-        required = 'true'
-        value=(undefined=== user ? '' : user.username))
+    form(method='POST' action='/log-in')
+      div.form-group
+        label.label-form(for='username') Email:
+        input#email.form-control(
+          type='email', 
+          placeholder='Email' 
+          name='username' 
+          required = 'true'
+          value=(undefined=== user ? '' : user.username))
 
-      label(for='password') Password:
-      input#password.form-control(
-        type='password', 
-        placeholder='Password' 
-        name='password' 
-        required = 'true'
-      )
-    button.btn.btn-primary(type='submit') Submit
+        label(for='password') Password:
+        input#password.form-control(
+          type='password', 
+          placeholder='Password' 
+          name='password' 
+          required = 'true'
+        )
+      button.btn.btn-primary(type='submit') Submit
