--- a/views/nologin.pug
+++ b/views/nologin.pug
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  h1 NO LOGIN ERROR 
-  h3 Please go back to the homepage: 
+
+    h1.title-form NO LOGIN ERROR
+    div.text-infos Please go back to the homepage: 
     div.profile-btns
         a.log-in-out-btn(href="/") Homepage
