--- a/views/signup_form.pug
+++ b/views/signup_form.pug
@@ -1,59 +1,60 @@
 extends layout
 
 block content
-  h1=title
-  p Please sign-up:
+  div.form-container
+    h1.title-form= title
+    div.text-infos Please sign-up:
 
-  p.auth-alternative Already registered? 
-    a(href="log-in") Log in
+    p.auth-alternative Already registered? 
+      a(href="log-in") Log in
 
-  form(method='POST' action='')
-    div.form-group
-      label(for='name') Name:
-      input#name.form-control(
-        type='text', 
-        placeholder='Name' 
-        name='name' 
-        required = 'true'
-        value=(undefined=== user ? '' : user.name))
+    form(method='POST' action='')
+      div.form-group
+        label.label-form(for='name') Name:
+        input#name.form-control(
+          type='text', 
+          placeholder='Name' 
+          name='name' 
+          required = 'true'
+          value=(undefined=== user ? '' : user.name))
 
-      label(for='surname') Surname:
-      input#surname.form-control(
-        type='text', 
-        placeholder='Surname' 
-        name='surname' 
-        required = 'true'
-        value=(undefined=== user ? '' : user.surname))
+        label.label-form(for='surname') Surname:
+        input#surname.form-control(
+          type='text', 
+          placeholder='Surname' 
+          name='surname' 
+          required = 'true'
+          value=(undefined=== user ? '' : user.surname))
 
-      label(for='username') Email:
-      input#email.form-control(
-        type='email', 
-        placeholder='Email' 
-        name='username' 
-        required = 'true'
-        value=(undefined=== user ? '' : user.username))
-      if (error)
-        p(style="color: red;") #{error}
+        label.label-form(for='username') Email:
+        input#email.form-control(
+          type='email', 
+          placeholder='Email' 
+          name='username' 
+          required = 'true'
+          value=(undefined=== user ? '' : user.username))
+        if (error)
+          p(style="color: red;") #{error}
 
-      label(for='password') Password:
-      input#password.form-control(
-        type='password', 
-        placeholder='Password' 
-        name='password' 
-        required = 'true'
-        value=(undefined=== user ? '' : user.password))
+        label.label-form(for='password') Password:
+        input#password.form-control(
+          type='password', 
+          placeholder='Password' 
+          name='password' 
+          required = 'true'
+          value=(undefined=== user ? '' : user.password))
 
-      label(for='confPassword') Confirm password:
-      input#confPassword.form-control(
-        type='password', 
-        placeholder='Confirm password' 
-        name='confPassword' 
-        required = 'true'
-      )
-      if (passwordConfirmationError)
-        p(style="color: red;") #{passwordConfirmationError}
+        label.label-form(for='confPassword') Confirm password:
+        input#confPassword.form-control(
+          type='password', 
+          placeholder='Confirm password' 
+          name='confPassword' 
+          required = 'true'
+        )
+        if (passwordConfirmationError)
+          p(style="color: red;") #{passwordConfirmationError}
 
-    button.btn.btn-primary(type='submit') Submit
+      button.btn.btn-primary(type='submit') Submit
 
-  if (errors)
-    p #{errors}
+    if (errors)
+      p #{errors}
