--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,7 @@ block content
 
         hr.hr-separate
         
-        div.title User's comments
+        div.title Member's comments and ideas
         div.comment-list
           each message in messages
             div.message-container 
@@ -38,7 +38,7 @@ block content
 
         hr.hr-separate
 
-        div.title User's comments
+        div.title Member's comments and ideas
         div.comment-list
           each message in messages
             div.message-container 
@@ -47,3 +47,4 @@ block content
                 h5.message-author Anonymous
               p.message-text= message.content 
               p.message-date= message.date
+
