final responsiveness design

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,10 +24,10 @@ html
               div.header-right
                 ul.nav.nav-right
                   a.header-click(href='/auth/log-in')
-                    span.nav-text.header-click Log in
+                    span.nav-text.header-click Log-in
                   li.nav-link.text-white.header-btn
                     a(href='/auth/sign-up')
-                      span.nav-text.header-btn Sign up
+                      span.nav-text.header-btn Sign-up
             else 
               div.header-right
                 ul.nav.col-lg-auto.justify-content-center.my-md-0.text-small.nav-right
@@ -38,7 +38,7 @@ html
                   //-       span.nav-text.header-btn Add a comment
                   li.nav-link.text-white
                     a(href="/log-out")
-                      span.nav-text.header-btn Log out
+                      span.nav-text.header-btn Log-out
 
     div.content
       block content
